--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,25 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+
+Nasa stelovanja
+php artisan key:generate
+APP_ENV=local
+APP_DEBUG=true
+APP_KEY=
+APP_URL=http://stolarbeograd.com
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=homestead
+DB_USERNAME=homestead
+DB_PASSWORD=secret
+
+
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+MAIL_DRIVER=log
